Commit on 18th July

--- a/01-Coming-to-America-A-Prequel-by-Abhijit-Sanyal.Rmd
+++ b/01-Coming-to-America-A-Prequel-by-Abhijit-Sanyal.Rmd
@@ -1,9 +1,9 @@
-# Coming to America - A Prequel by Abhijit Sanyal
+# Coming to America - A Prequel by Abhijit Sanyal {-}
 
 
 When I finished engineering school and my management studies I did not harbor any thoughts of leaving my hometown – Calcutta and going abroad for any work or further studies. I was fortunate that even before I joined engineering college I had travelled widely in Europe, Middle East and Asia with my parents – so the “wanderlust” issue was not important. I wanted to work in Calcutta and stay in the same city with my parents and friends and family. 
 
-I joined Dunlop India as a “Management Trainee” after my engineering degree from IIT Kharagpur (Indian Institute of Technology at Kharagpur) and was based out of the factory in a town called Shahgunge where Dunlop India maintained a sprawling factory spewing automotive and other industrial rubber products. The factory campus also included a huge township with very well maintained and manicured lawns, hospitals, club-houses and even squash and tennis courts. We stayed at the “Chummery” – a bachelor’s hostel and I went every day to the factory for some work, came back to play squash, tennis etc and then drinks at the club. In the weekends, we would go back to the city – on either the pool car or take a train. Life was comfortable but fairly boring. After less than a year of this – a group of about 10 of us – management trainees – all of us from IIT Kharagpur – decided that life had more to offer than making rubber products and we all applied for the fairly tough competitive examinations to the management schools – the Indian Institutes of Management. The results came in on a sultry summer afternoon of 1979 and we found that all of us were accepted – but in different schools across the country – Ahmedabad, Bangalore and Calcutta. The next morning – we all trooped in to the General Manager’s office starting at 8 AM in the morning at intervals of 30 minutes to submit our resignations. The General Manager – a short aggressive looking fellow by the name of Mr Gonsalves – told us later at our going away party – that he was expecting the whole “Chummery” to leave Dunlop by the end of the day. We got drunk over the next few days at our “success” in getting out of Shahgunge – not really knowing what we are now getting into. 
+I joined Dunlop India as a “Management Trainee” after my engineering degree from IIT Kharagpur (Indian Institute of Technology at Kharagpur) and was based out of the factory in a town called Shahgunge where Dunlop India maintained a sprawling factory spewing automotive tires and other industrial rubber products. The factory campus also included a huge township with very well maintained and manicured lawns, hospitals, club-houses and even squash and tennis courts. We stayed at the “Chummery” – a bachelor’s hostel and I went every day to the factory for some work, came back to play squash, tennis etc and then drinks at the club. In the weekends, we would go back to the city – on either the pool car or take a train. Life was comfortable but fairly boring. After less than a year of this – a group of about 10 of us – management trainees – all of us from IIT Kharagpur – decided that life had more to offer than making rubber products and we all applied for the fairly tough competitive examinations to the management schools – the Indian Institutes of Management. The results came in on a sultry summer afternoon of 1979 and we found that all of us were accepted – but in different schools across the country – Ahmedabad, Bangalore and Calcutta. The next morning – we all trooped in to the General Manager’s office starting at 8 AM in the morning at intervals of 30 minutes to submit our resignations. The General Manager – a short aggressive looking fellow by the name of Mr Gonsalves – told us later at our going away party – that he was expecting the whole “Chummery” to leave Dunlop by the end of the day. We got drunk over the next few days at our “success” in getting out of Shahgunge – not really knowing what we are now getting into. 
 
 The two years for me at the Indian Institute of Management, Calcutta was a memorable period. The courses were fairly easy and straightforward and during placement time since I wanted a job that would allow me to stay in Calcutta – I joined “The Calcutta Electricity Supply Corporation” as a purchase executive in their headquarters at the Victoria House office. Victoria House was in the center of the city – a 6 storied imposing domed structure built during the 1930s. The name was taken from the Company's Holborn Headquarters, in London. The company was in the business of generating, transmitting and distributing electricity to the perpetually energy starved city of Calcutta. A “pucca British” company – it was founded at the turn of the century and its shares were till recently quoted on the London Stock Exchange. Tea was served in your office twice a day by liveried waiters and a three-course lunch was available daily in the officers’ dining room. It was interesting to see these dying vestiges of post-colonial British culture in an otherwise crumbling economic situation. I was also continuously reminded during our meetings and cocktail party gatherings that I was very privileged to be working there. Most of my colleagues were the scions of the very well-connected business and professional elite class of Calcutta. I was the company’s first few MBA hires – and was a corporate orphan since I came with no recommendations. 
 
