--- a/02-Penurious-Graduate-Student-by-Abhijit-Sanyal.Rmd
+++ b/02-Penurious-Graduate-Student-by-Abhijit-Sanyal.Rmd
@@ -1,4 +1,4 @@
-# Penurious Graduate Student by Abhijit Sanyal
+# Penurious Graduate Student by Abhijit Sanyal {-}
 
 My old expired passport has on page 15 – “Sept – 5 – 1987 – Admitted” over the full signature of “Laura Lee Livingston” – consular officer of the US Consulate General, Calcutta. I arrived at JFK airport on 5th September 1987 after a long flight from Delhi on now defunct Pan Am Airways. A friend of mine who received me at the airport – and I spent a night at his apartment in Manhattan. The next day he drove me and my two puny suitcases to the University of Massachusetts at Amherst. He knew a professor out there who was also in the business school and he decided to meet him as well. On the drive to Amherst – we drove through all the places that I read about – Pelham, Greenwich, Stamford, New Haven and Hartford. I noticed that as we went through the toll booths – he greeted and was also being greeted equally vocally by the toll booth collectors with a big “Hello” and a few seconds worth of conversation. I asked him if he personally knew the toll booth collectors – and he said “No” – “This is the US – there is optimism everywhere”. It seemed to me that the sun never sets in this country.
 
