--- a/04-My-School-Days-in-Baghdad-and-Calcutta-Abhijit-Sanyal.Rmd
+++ b/04-My-School-Days-in-Baghdad-and-Calcutta-Abhijit-Sanyal.Rmd
@@ -1,4 +1,4 @@
-# My School Days in Baghdad and Calcutta
+# My School Days in Baghdad and Calcutta {-}
 
 
 Home Schooling, Day Dreaming and a Preamble to Calcutta Boy's School
