--- a/05-Shearing-shortening-and-embellishing-your-name-the-American-way-by-Abhijit-Sanyal.Rmd
+++ b/05-Shearing-shortening-and-embellishing-your-name-the-American-way-by-Abhijit-Sanyal.Rmd
@@ -1,4 +1,4 @@
-# Shearing, shortening and embellishing your name - the American Way by Abhijit Sanyal
+# Shearing, shortening and embellishing your name - the American Way by Abhijit Sanyal {-}
 
 On October 19, 1885, the S.S. Eider approached Sandy Hook, New Jersey, and the Narrows, twelve days 
 after it had departed Bremen, Germany.  Donald Trump’s immigrant grandfather, Friedrich Trump came abroad on that ship. He was processed through what was then known as the Emigrant Landing Depot where the state of New York processed immigrants before they began pursuing their American dreams. The Trumps in Germany had simplified their name from Drumpf and the immigrant recording ledger in New York records the barber’s apprentice name as Trumpf. Friedrich in pursuing his dream would soon discard the ‘f’ and the family name would become Trump. What an interesting uplifting journey for Drumpf as an awkard unpronounceable, name to the bold and convincing Trump, a word pregnant with decisive and overwhelming power as in “He has the trump card”. 
