--- a/06-Sounds-and-memories-of-my-childhood-by-Abhijit-Sanyal.Rmd
+++ b/06-Sounds-and-memories-of-my-childhood-by-Abhijit-Sanyal.Rmd
@@ -1,4 +1,4 @@
-# Sounds and memories of my childhood by Abhijit Sanyal
+# Sounds and memories of my childhood by Abhijit Sanyal {-}
 
 The only sounds I hear in Lexington – are the hum of my computer and the occasional ringing sound when I get email or the reminder for another conference call and of course the ring tone of my cell phone or my wife’s. When I go outside I am greeted by the call of the birds in summer which is very soothing against the dull background roar of traffic from the nearby highway on route I-95.
 
