--- a/07-To-oblivion-and-back-by-Abhijit-Sanyal.Rmd
+++ b/07-To-oblivion-and-back-by-Abhijit-Sanyal.Rmd
@@ -1,4 +1,4 @@
-# To oblivion and back by Abhijit Sanyal
+# To oblivion and back by Abhijit Sanyal {-}
 
 The call came when I was down to running my last mile. I noticed the caller was Brigham and Women’s’ Hospital (BWH) and I immediately pressed the answer key. It was Kristen, one of the nurses at BWH and she said that the results of the pre-operation blood work had come back and I had to meet the Hematologist Oncologist as quickly as possible. With mounting anxiety, I asked “A Hemonc at this stage. Why what is going on?” She would not elaborate any further and with my heart now racing, I literally ran from the Willards Woods near my home in Lexington to the hospital.
 
