--- a/08-The-story-of-two-Qasims-by-Abhijit-Sanyal.Rmd
+++ b/08-The-story-of-two-Qasims-by-Abhijit-Sanyal.Rmd
@@ -1,4 +1,4 @@
-# The story of two Qasims by Abhijit Sanyal
+# The story of two Qasims by Abhijit Sanyal {-}
 
 I was about 8 years old when we moved to Baghdad from Calcutta. My father was offered a position in Iraqi Airways and would be on leave from his original employer – the government owned Indian Airlines. We arrived in Baghdad in the winter of 1962 and I still remember the shock of the freezing desert winter in contrast to the mildly pleasant winters of Calcutta. Our house was in the old Railway colony near what is now the old Baghdad airport and close to the main railway station and the Presidential Palace. My father’s colleagues lived nearby, and my father’s office was at the airport – which was a 10 minute drive.
 
