--- a/09-Hoar-frost-and-the-conscious-universe-by-Dr-Carl-Von-Essen.Rmd
+++ b/09-Hoar-frost-and-the-conscious-universe-by-Dr-Carl-Von-Essen.Rmd
@@ -1,4 +1,4 @@
-# Hoar frost and the conscious universe by Dr Carl Von Essen
+# Hoar frost and the conscious universe by Dr Carl Von Essen {-}
 
 Henry David Thoreau, in his winter wanderings around Concord, observed an unusually heavy hoar frost one morning.  He described it in his essay “The Natural History of Massachusetts”:
 
