--- a/10-Reaching-the-other-side-by-Dr-Carl-Von-Essen.Rmd
+++ b/10-Reaching-the-other-side-by-Dr-Carl-Von-Essen.Rmd
@@ -1,4 +1,4 @@
-# Reaching the other side by Dr. Carl Von Essen
+# Reaching the other side by Dr. Carl Von Essen {-}
 
 Occasionally I find myself looking at something and then have been surprised to realize that I am actually seeing it. As for example, standing on the edge of the Grand Canyon and “admiring the view.” This scene registers on my retina which transmits the data to the visual center in the back of the brain. The resulting mental image certainly evokes a pleasurable feeling, perhaps also an emotion of awe or even fear (what if I should fall off the cliff?). 
 
