--- a/11-Yellama-by-Dr-Carl-Von-Essen.Rmd
+++ b/11-Yellama-by-Dr-Carl-Von-Essen.Rmd
@@ -1,4 +1,4 @@
-# Yellama by Dr Carl Von Essen
+# Yellama by Dr Carl Von Essen {-}
 
 **1. The Village**
 The rising sun lit the barren peaks of the Jawadhi Hills with shades of rose and amber. Soon, its rays glistened on the brilliant green of the paddy fields as six women emerged from the small Tamil village of Elagiri. They walked carefully in single file along the earthen ridges separating the watery rectangles that stretched in a checkerboard pattern along the broad valley.
