--- a/13-The-Showing-by-Dr-Gouri-Datta.Rmd
+++ b/13-The-Showing-by-Dr-Gouri-Datta.Rmd
@@ -1,4 +1,4 @@
-# The Showing by Dr Gouri Datta
+# The Showing by Dr Gouri Datta {-}
 
 The tempo of the usual hustle and bustle of daily life seemed to have jumped to a faster gear at the large old house, that stood like an ancient mastodon, at the end of  the winding narrow small town road in Bengalitola, Phul-jharia.
 
