--- a/14-Cremation-by-Manisha-Roy.Rmd
+++ b/14-Cremation-by-Manisha-Roy.Rmd
@@ -1,4 +1,4 @@
-# Cremation by Manisha Roy
+# Cremation by Manisha Roy {-}
 
  *[This is an excerpt from my novel Professor Hamilton”s Passage to India (Yapanchitra Books, 2009, Kolkata, India.) The book is about the adventures and misadventures of an American physician who goes to India with a fellowship to do research in infectious diseases. Despite all good intentions, Dr. Hamilton faces huge problems in both professional and personal life. The chapter below describes one of them.]*
  
