--- a/15-California-Stories-Welcome-to-California-Part-1-by-Manisha-Roy.Rmd
+++ b/15-California-Stories-Welcome-to-California-Part-1-by-Manisha-Roy.Rmd
@@ -1,4 +1,4 @@
-# California Stories - Welcome to California (Part 1 and Part 2) by Manisha Roy
+# California Stories - Welcome to California (Part 1) by Manisha Roy {-}
 
 *[I studied at the Universities of Rochester and Chicago between 1960 and 1963 and obtained my second Master’s in Anthropology. In 1964 I went back to India hoping to live there a few years to finish the fieldwork toward my doctoral research. I was lucky to land a cushy job at the Anthropological Survey, Gov. of India as a research scholar which would offer me ample opportunity to do the fieldwork. Within a couple of months I discovered the dark side of this lucky break. I was 28 years old at the time and invited a lot of jealousy and animosity since I believe that I was offered the position due to my foreign degree over many senior and perhaps deserving candidates. I have written about this extremely painful time elsewhere (see My Four Homes, a memoir, 2015) but this article is not about my sojourn in India. I want to write about my re-location back to the US in 1969. The events below are experiences of my initiation to the next three years of graduate school at the Univ. of California, San Diego.]*
 
