--- a/17-And-then-there-was-Amsterdam-by-Nilay-Mukherjee.Rmd
+++ b/17-And-then-there-was-Amsterdam-by-Nilay-Mukherjee.Rmd
@@ -1,4 +1,4 @@
-# And then there was Amsterdam by Nilay Mukherjee (Feb 6, 2012)
+# And then there was Amsterdam by Nilay Mukherjee {-}
 
 The phone buzzed in Ronodeep’s cubicle. The caller id showed it was Neil Baxter. Neil was Ronodeep’s boss. 
 
