--- a/18-The-Marijuana-Talk-by-Nilay-Mukherjee.Rmd
+++ b/18-The-Marijuana-Talk-by-Nilay-Mukherjee.Rmd
@@ -1,4 +1,4 @@
-# The Marijuana Talk by Nilay Mukherjee
+# The Marijuana Talk by Nilay Mukherjee {-}
 
 
 So, we were getting into my car: my son and I. We had just watched the Fantastic Four. It got 8% on Rotten Tomatoes, but my son wanted to see it anyway because he had read the book…. ahem… the comic book….ahem..the graphic novel (as he reminded me). He thought the movie was low on action, but remained faithful to the original storyline. Good! But that is not what this story is about.
