--- a/22-The-World-is-what-it-is-by-Nilay-Mukherjee.Rmd
+++ b/22-The-World-is-what-it-is-by-Nilay-Mukherjee.Rmd
@@ -1,4 +1,4 @@
-# The World is what it is by Nilay Mukherjee
+# The World is what it is by Nilay Mukherjee {-}
 
 The world is what it is: but some days we see a more unpleasant side of it: perhaps our internal lens is disturbed to begin with, so we notice it more.
 
