--- a/23-Urinal-Etiquette-by-Nilay-Mukherjee.Rmd
+++ b/23-Urinal-Etiquette-by-Nilay-Mukherjee.Rmd
@@ -1,4 +1,4 @@
-# Urinal Etiquette by Nilay Mukherjee
+# Urinal Etiquette by Nilay Mukherjee {-}
 
 So, I have a question to pose: primarily to men, because it involves a matter of etiquette in a place where women are not allowed (oooh.... interesting... please, feminists don't get upset, there are such places still in existence even today for very good reasons), but women are free to pitch in with their comments.
 
