--- a/24-Friendship-A-Tale-of-Two-Immigrants-by-Nilanjana-Rakhit.Rmd
+++ b/24-Friendship-A-Tale-of-Two-Immigrants-by-Nilanjana-Rakhit.Rmd
@@ -1,4 +1,4 @@
-# Friendship, A Tale of Two Immigrants by Nilanjana Rakhit
+# Friendship, A Tale of Two Immigrants by Nilanjana Rakhit {-}
 
 
 "That's a beautiful soro!"
