--- a/27-Debdas-Romanticism-and-Sex-Workers-by-Rahul-Ray.Rmd
+++ b/27-Debdas-Romanticism-and-Sex-Workers-by-Rahul-Ray.Rmd
@@ -1,4 +1,4 @@
-# Debdas, Romanticism and Sex Workers by Rahul Ray
+# Debdas, Romanticism and Sex Workers by Rahul Ray {-}
 
 
 First Nishi-Padma in Bengali was released in 1970, and then came Amar Prem in Hindi in 1972.  Both movies, based on a short story, Hinger Kachuri by Bibhutibhusan Bandopadhyay were instant sensations.   Uttam Kumar, the veteran Bengali matinee idol was flawless as a Bangalee babu rejoining his childhood love Pushpa, who had taken up the world’s oldest profession due to failing family circumstances.  In the Hindi version Rajesh Khanna, with his flawless and chiseled face donning a charming smile stole the heart of every cinema-goer who saw the movie.  But, the real show-stoppers were the songs in both movies.  Manna De received a national award for the song ‘Jaa khushi ora bolay boluk’.  I saw Amar Prem when I was a mere adolescent.  But closing my eyes I still can see Rajesh Khanna, in a drunken stupor singing ‘Kuch tow log kohenge’.  Even today, when these kinds of movies are no longer in vogue and considered soggy by most discriminating movie-goers, both songs are sure to drench their hearts and minds with sadness.  Yet there will be a palpable sense of romanticism. 
