--- a/28-Satiating-Mind-National-Public-Radio-NPR-by-Rahul-Ray.Rmd
+++ b/28-Satiating-Mind-National-Public-Radio-NPR-by-Rahul-Ray.Rmd
@@ -1,36 +1,36 @@
-# Satiating the Mind: National Public Radio (NPR) by Rahul Ray
+# Satiating the Mind: National Public Radio (NPR) by Rahul Ray {-}
 
 
-	We moved to Massachusetts in February in the middle of a dreadful winter with frigid temperatures and thick snow and ice cover on everything.  Fortunately, our friend had arranged for an apartment for us in North Cambridge.  However, my post-doctoral fellowship job at MIT which is located on the other edge of town.  I had no prior experience of taking bus to work.  Besides the nearest bus-stop was a 15-20minute walk from our apartment.  After a few days of walk through snow and slush and frosty temperatures I decided to take my AMC Hornet station wagon to work.  In those days yearly parking stickers in MIT garages were available at a very nominal price.  
+We moved to Massachusetts in February in the middle of a dreadful winter with frigid temperatures and thick snow and ice cover on everything.Fortunately, our friend had arranged for an apartment for us in North Cambridge.However, my post-doctoral fellowship job at MIT which is located on the other edge of town.I had no prior experience of taking bus to work.Besides the nearest bus-stop was a 15-20 minute walk from our apartment.After a few days of walk through snow and slush and frosty temperatures I decided to take my AMC Hornet station wagon to work.In those days yearly parking stickers in MIT garages were available at a very nominal price.I remember the very first day I was driving to work and flipping through the channels in the car radio to listen to something substantial.These were pre-CD days, and my car didn’t have a cassette player to play any music of my choosing.There were stations for pop, rock, jazz, classical music, call-in shows and what not, and finally I got stuck into a station where a deep and compelling male voice was talking in great detail about the Transcendentalist movement in New England.  
 
-	I remember the very first day I was driving to work and flipping through the channels in the car radio to listen to something substantial.  These were pre-CD days, and my car didn’t have a cassette player to play any music of my choosing.  There were stations for pop, rock, jazz, classical music, call-in shows and what not, and finally I got stuck into a station where a deep and compelling male voice was talking in great detail about the Transcendentalist movement in New England.  It immediately caught by attention.  Reporting ended after a while, and this man signed off as “This is morning edition. I am Bob Edwards.”  Soon another voice identified the station: “This is WBUR, your radio station for National Public Radio, NPR”.  
+It immediately caught by attention.Reporting ended after a while, and this man signed off as “This is morning edition. I am Bob Edwards.” Soon another voice identified the station: “This is WBUR, your radio station for National Public Radio, NPR”.The die was cast, and soon it became my habit to listen to Bob Edwards in the morning, and Susan Stamberg in the evening driving back home. The real kicker came one day when I heard one of the NPR personalities interviewing someone in Kolkata, asking why Kolkatans have such a love-affair with a city that appears moribund to most others.  In replying, this person started playing his harmonium and soon the airwave was filled with Rabindrasangeet!  
 
-The die was cast, and soon it became my habit to listen to Bob Edwards in the morning, and Susan Stamberg in the evening driving back home.  The real kicker came one day when I heard one of the NPR personalities interviewing someone in Kolkata, asking why Kolkatans have such a love-affair with a city that appears moribund to most others.  In replying, this person started playing his harmonium and soon the airwave was filled with Rabindrasangeet!  I was sold, and this experience made me a slave of the NPR. Many days I would sit in the car, even after reaching home or work to catch the tail-end of an interesting report. 
+I was sold, and this experience made me a slave of the NPR. Many days I would sit in the car, even after reaching home or work to catch the tail-end of an interesting report.I grew up in Kolkata at a time when there was no television, and radio ran supreme.  On Sunday mornings, there was ‘Sangeet Sikkha’r Asor’ (Forum for learning music), stewarded by Pankaj Mullick, the venerable Rabindrasangeet teacher and vocalist.  Mr. Mullick in his deep voice would exclaim his oft-repeated phrase – “Naa, hochhey naa, abar korun” (No, you are not getting it, do it over).  In ‘Sishu Mahal’ (The world of children) Ms. Indira Debi, much like Mr. Rogers in Mr. Rogers Neighborhood would begin her program with - “Chhotto sona bondhura, valo achho tow sob?” (My dear little friends, are you keeping well?), and all the assembled children would blare out in unison- Ha-a-a-n (Y-e-e-e-s)!  Then there was Ms. Bela Dey in Mohila Mahal who would talk about sewing, cooking and other domestic things.  She made quite a name for herself during 1962 Indo-China war when she insisted not to waste any part of a food-ingredient.  
 
-	I grew up in Kolkata at a time when there was no television, and radio ran supreme.  On Sunday mornings, there was ‘Sangeet Sikkha’r Asor’ (Forum for learning music), stewarded by Pankaj Mullick, the venerable Rabindrasangeet teacher and vocalist.  Mr. Mullick in his deep voice would exclaim his oft-repeated phrase – “Naa, hochhey naa, abar korun” (No, you are not getting it, do it over).  In ‘Sishu Mahal’ (The world of children) Ms. Indira Debi, much like Mr. Rogers in Mr. Rogers Neighborhood would begin her program with - “Chhotto sona bondhura, valo achho tow sob?” (My dear little friends, are you keeping well?), and all the assembled children would blare out in unison- Ha-a-a-n (Y-e-e-e-s)!  Then there was Ms. Bela Dey in Mohila Mahal who would talk about sewing, cooking and other domestic things.  She made quite a name for herself during 1962 Indo-China war when she insisted not to waste any part of a food-ingredient.  Even today, talking about something totally ridiculous we would repeat her instructions – “Kumro-r khosa phele na diye, chhoto koray katun aar valo koray gawa ghiye mooch-mooche koray vayjay cheenee’r rawsay phelun” (Why waste pumpkin-peels!  Chop them up in small pieces, and fry them to a crunchy red in first rate clarified butter.  Then dip them in thick sugary syrup.).  India was a desperately poor country, and clarified butter and sugar were quite expensive items in those days.  In the afternoons and evenings there were ‘Anurodher asor’ (Songs of your request) and ‘Chhayachhobir gaan’ (film songs).  There were only hand-cranked and later on electric gramophones in only a handful of households.  Therefore, these two programs were responsible for developing an ear for music for me and many others who grew up in Kolkata in those days. 
+Even today, talking about something totally ridiculous we would repeat her instructions – “Kumro-r khosa phele na diye, chhoto koray katun aar valo koray gawa ghiye mooch-mooche koray vayjay cheenee’r rawsay phelun” (Why waste pumpkin-peels!  Chop them up in small pieces, and fry them to a crunchy red in first rate clarified butter.Then dip them in thick sugary syrup.).India was a desperately poor country, and clarified butter and sugar were quite expensive items in those days.In the afternoons and evenings there were ‘Anurodher asor’ (Songs of your request) and ‘Chhayachhobir gaan’ (film songs).There were only hand-cranked and later on electric gramophones in only a handful of households.Therefore, these two programs were responsible for developing an ear for music for me and many others who grew up in Kolkata in those days.On cricket days we were glued to the radio listening to ball-to-ball description by Aajy Bose, Kamal Bhattacharya and later on Pushpen Sarkar. Ajay, in his slightly nasal but crystal clear voice would describe every little detail of the game, and often would ask his fellow commentator – “Kamal-da, aapni key bawlen (Kamal-da, what do you say)?” Kamal-da would immediately pick up the hint, and in his dulcet voice would explain the game played in front of him like a poem or a piece of good music.In those days there were no one-day matches, and games were slow and even-paced, as the game of cricket was supposed to be.On Sunday afternoons I enjoyed listening to audio-plays by legendary theater personalities.The grave yet mellifluous voice of Shambhu Mitra in ‘Raja’ (The king) or ‘Raja Oydipous’ (King Oedipus) still rings in my ear, so does Nilima Das’s superb audio-acting in the Bengali rendition of Glass Menagerie, the memorable play by Tennessee Williams. 
 
-	On cricket days we were glued to the radio listening to ball-to-ball description by Aajy Bose, Kamal Bhattacharya and later on Pushpen Sarkar.  Ajay, in his slightly nasal but crystal clear voice would describe every little detail of the game, and often would ask his fellow commentator – “Kamal-da, aapni key bawlen (Kamal-da, what do you say)?”   Kamal-da would immediately pick up the hint, and in his dulcet voice would explain the game played in front of him like a poem or a piece of good music.  In those days there were no one-day matches, and games were slow and even-paced, as the game of cricket was supposed to be.  
+Then there was this annual event of ‘Mahishasuromardini’ (The slayer of the buffalo demon). On the day of ‘Mahalaya’ (a holy day for Hindus) everyone in Kolkata would dutifully turn on their radio at 4 o’clock in the morning to listen to the oratory of Birendrakrishna Bhadra in his snuff -laden nasal voice. At times his voice would hit the ceiling, and in the next moment he would whisper in his inimitable rendition of Chandi (a mythological holy scripture for Hindus).  Sometimes his voice would choke in emotion. I could clearly hear him sobbing under his breath. Those were the days!  In short I was in love with radio.I came to the Unites States as a graduate student to Pullman, a very small college town in the state of Washington in the North-Western part of the country.  
 
-On Sunday afternoons I enjoyed listening to audio-plays by legendary theater personalities.  The grave yet mellifluous voice of Shambhu Mitra in ‘Raja’ (The king) or ‘Raja Oydipous’ (King Oedipus) still rings in my ear, so does Nilima Das’s superb audio-acting in the Bengali rendition of Glass Menagerie, the memorable play by Tennessee Williams.  Then there was this annual event of ‘Mahishasuromardini’ (The slayer of the buffalo demon).  On the day of ‘Mahalaya’ (a holy day for Hindus) everyone in Kolkata would dutifully turn on their radio at 4 o’clock in the morning to listen to the oratory of Birendrakrishna Bhadra in his snuff -laden nasal voice.  At times his voice would hit the ceiling, and in the next moment he would whisper in his inimitable rendition of Chandi (a mythological holy scripture for Hindus).  Sometimes his voice would choke in emotion. I could clearly hear him sobbing under his breath. Those were the days!  In short I was in love with radio.    
+For the first two years I was completely engrossed in taking classes, doing Teaching Assistant (TA) job for professors and doing research, and I had barely any time to spare besides satiating my physical needs of eating and sleeping.  In the third year things became a bit easier, and I went to India to get married to my sweetheart from my University days and bring her to this country.  I also had to move from my dorm-room to a one-bedroom apartment reserved for married students.In those days TV was a novelty to me, but I didn’t have much time to watch it.  But soon I learned that it is an absolute necessity if you have your spouse at home.  Before Swapna started taking courses in the same school she spent her days and afternoons watching TV till I came home in the evening.  After dinner we would sit down together to watch TV.  Soon I got hooked on to watching the evening news followed by whatever was on.  We also watched TV after dinner.  In many cold winter nights we would cuddle up in a warm blanket and watch Archie Bunker snicker at his wife with racist jokes in All in the family, or Hawkeye Pierce and his team of miscreants running amok in the field camp with ever-present leg- pulling of ‘Hot Lips Houlahan’ in MASH.  Then there was Taxi where we met Alex Rieger and his team of NY city cabbies, and most incredibly Latka Gravas who walked in goose steps and spoke in an invented language.   
 
-	I came to the Unites States as a graduate student to Pullman, a very small college town in the state of Washington in the North-Western part of the country.  For the first two years I was completely engrossed in taking classes, doing Teaching Assistant (TA) job for professors and doing research, and I had barely any time to spare besides satiating my physical needs of eating and sleeping.  In the third year things became a bit easier, and I went to India to get married to my sweetheart from my University days and bring her to this country.  I also had to move from my dorm-room to a one-bedroom apartment reserved for married students.  
+We laughed and cried together, and went to sleep with a smile on our face.  Radio was completely forgotten.However, after our move to Massachusetts radio came back in a very big way, particularly as a commuting-companion, as mentioned earlier.  Soon, many NPR personalities became a part of my family.  Sylvia Poggiolli reported from Italy and other parts of Southern Europe in her whiskey and smoke-filled voice, or Nina Totenberg explained legal mumbo-jumbo with elegance and unmatched brevity.
 
-In those days TV was a novelty to me, but I didn’t have much time to watch it.  But soon I learned that it is an absolute necessity if you have your spouse at home.  Before Swapna started taking courses in the same school she spent her days and afternoons watching TV till I came home in the evening.  After dinner we would sit down together to watch TV.  Soon I got hooked on to watching the evening news followed by whatever was on.  We also watched TV after dinner.  In many cold winter nights we would cuddle up in a warm blanket and watch Archie Bunker snicker at his wife with racist jokes in All in the family, or Hawkeye Pierce and his team of miscreants running amok in the field camp with ever-present leg- pulling of ‘Hot Lips Houlahan’  in MASH.  Then there was Taxi where we met Alex Rieger and his team of NY city cabbies, and most incredibly Latka Gravas who walked in goose steps and spoke in an invented language.   We laughed and cried together, and went to sleep with a smile on our face.  Radio was completely forgotten.      
+Then one day I listen to a report from Scott Simon hiding in some enclave in Nicaragua, while war raged on in this small Central American country which found itself in a proxy war between America and the then Soviet Union.  Twice a week, Terry Gross in ‘Fresh Air’ entertained us with her amazing array of guests and her cool yet piercing questions.  Once in a while Baxter Black, a large animal veterinarian spoke of mundane things of farm life with a ready-wit and dark humor.
 
-	However, after our move to Massachusetts radio came back in a very big way, particularly as a commuting-companion, as mentioned earlier.  Soon, many NPR personalities became a part of my family.  Sylvia Poggiolli reported from Italy and other parts of Southern Europe in her whiskey and smoke-filled voice, or Nina Totenberg explained legal mumbo-jumbo with elegance and unmatched brevity.  Then one day I listen to a report from Scott Simon hiding in some enclave in Nicaragua, while war raged on in this small Central American country which found itself in a proxy war between America and the then Soviet Union.  Twice a week, Terry Gross in ‘Fresh Air’ entertained us with her amazing array of guests and her cool yet piercing questions.  Once in a while Baxter Black, a large animal veterinarian spoke of mundane things of farm life with a ready-wit and dark humor.  Then there was this elderly lady from Missoula, Montana.  One day in late March she was talking about spring arriving in Montana prairie.  Her grandma-voice was so ebullient that I could feel and smell spring in the middle of a dreary and melancholy winter in Massachusetts.  A warm feeling stayed with me for a long time.  It was like listening to those Rabindrasangeets by George Biswas.  They stay with you all day, and drench your heart like a monsoon drizzle. 
+Then there was this elderly lady from Missoula, Montana.  One day in late March she was talking about spring arriving in Montana prairie.  Her grandma-voice was so ebullient that I could feel and smell spring in the middle of a dreary and melancholy winter in Massachusetts.  A warm feeling stayed with me for a long time.  It was like listening to those Rabindrasangeets by George Biswas.  They stay with you all day, and drench your heart like a monsoon drizzle.That lady is long gone, Bob Edwards has bid farewell, but many other familiar voices have remained and continued to provide an essential ingredient of my daily life.   
 
-	That lady is long gone, Bob Edwards has bid farewell, but many other familiar voices have remained and continued to provide an essential ingredient of my daily life.   Many new and exciting voices have also joined in.  Ofeibea Quist-Arcton reports from Africa, and at the end of each report she signs off with “Ofeibea Quist-Arcton from Daa-ka-a-a-a-r”.  Each time I hear this long and drawling ‘Daa-ka-a-a-a-r’ a smile appears on my face.  Every evening Tom Ashbrook brings in hour-long discussion and call-ins on politics, literature, cinema, music and any subject that one can think of.  Some people have been almost a permanent fixture for decades.  Each Saturday Tom and Ray Magliozzi brothers of Car Talk* lighted me up with their wise-cracks about cars and what not!  One Saturday I was listening to them in my car and these MIT alums were talking about things related to space shuttles and astronauts.  Suddenly a voice came to the airwave and started talking about life in a space-shuttle.  Soon Ray commented – “You sound like a space-alien”.  After a short laugh the man replied – “I am actually calling from a shuttle”.  How often does one get to hear an astronaut live from space!  Soon it was discovered that the man actually lived in Cambridge, and used to take his Volkswagen Beetle to Ray’s shop in Sidney Street for repair.  Sidney Street is a short distance from the MIT campus, and one day I ventured into the Good News Garage.  Ray, a short and stocky person with a heavy Italian accent was minding the shop.  I always felt that Ray was a refined person judging from his comments on a wide variety of subjects ranging from classical music, philosophy to street smartness.  To my bewilderment I couldn’t help notice pictures of women in skimpy dresses dotting the wall behind him.  Somehow it turned me off, and I never took my car to his garage, but I continued to listen to Car Talk regularly and laugh at his wisecracks. 
+Many new and exciting voices have also joined in.  Ofeibea Quist-Arcton reports from Africa, and at the end of each report she signs off with “Ofeibea Quist-Arcton from Daa-ka-a-a-a-r”.  Each time I hear this long and drawling ‘Daa-ka-a-a-a-r’ a smile appears on my face.  Every evening Tom Ashbrook brings in hour-long discussion and call-ins on politics, literature, cinema, music and any subject that one can think of.  Some people have been almost a permanent fixture for decades.  Each Saturday Tom and Ray Magliozzi brothers of Car Talk* lighted me up with their wise-cracks about cars and what not!  One Saturday I was listening to them in my car and these MIT alums were talking about things related to space shuttles and astronauts.  Suddenly a voice came to the airwave and started talking about life in a space-shuttle.  Soon Ray commented – “You sound like a space-alien”.  After a short laugh the man replied – “I am actually calling from a shuttle”.  How often does one get to hear an astronaut live from space!  Soon it was discovered that the man actually lived in Cambridge, and used to take his Volkswagen Beetle to Ray’s shop in Sidney Street for repair.  Sidney Street is a short distance from the MIT campus, and one day I ventured into the Good News Garage.  Ray, a short and stocky person with a heavy Italian accent was minding the shop.  I always felt that Ray was a refined person judging from his comments on a wide variety of subjects ranging from classical music, philosophy to street smartness.  To my bewilderment I couldn’t help notice pictures of women in skimpy dresses dotting the wall behind him.  Somehow it turned me off, and I never took my car to his garage, but I continued to listen to Car Talk regularly and laugh at his wisecracks.Soon I learned that having fun, even listening to NPR was not free.  Coming from India I never heard of a fund-raiser for a radio-station.  Thus, when WBUR, a local NPR station started a fund-raiser and many of my favorite radio-personalities chipped in with an appeal to give to ‘your’ station, I was less than enthusiastic.  
 
-	Soon I learned that having fun, even listening to NPR was not free.  Coming from India I never heard of a fund-raiser for a radio-station.  Thus, when WBUR, a local NPR station started a fund-raiser and many of my favorite radio-personalities chipped in with an appeal to give to ‘your’ station, I was less than enthusiastic.  Actually, it was more of an irritant that they had to stop the programming to beg for money.  But soon it sank into my head that these stations are largely run by listener contributions, and above all I should pay for my entertainment.  My postdoctoral stipend was barely enough to make both ends meet for me and my wife.  But tug on my conscience was so strong that I called the radio-station and meekly offered a measly amount as my contribution.  I was overjoyed when the person on the other side thanked me profusely and requested my permission to announce my name as one of the givers.  This was my maiden attempt at philanthropy.   An hour later I received an excited call from my wife.  She had heard my name in the radio that was a standard feature in the laboratory at Massachusetts General Hospital she was working at that time.  She thanked me for this decision and informed that she was thinking of doing the same herself.  To my amazement I learned that she had also fallen for NPR and its personalities.  Now, that was two for two for a family of two!   
+Actually, it was more of an irritant that they had to stop the programming to beg for money.  But soon it sank into my head that these stations are largely run by listener contributions, and above all I should pay for my entertainment.  My postdoctoral stipend was barely enough to make both ends meet for me and my wife. But the tug on my conscience was so strong that I called the radio-station and meekly offered a measly amount as my contribution.  I was overjoyed when the person on the other side thanked me profusely and requested my permission to announce my name as one of the givers.  This was my maiden attempt at philanthropy.   
 
-	Listening to NPR had a longstanding effect on our psyche.  Several years ago, when we were seriously contemplating about going back to India for good we considered many things that we would miss.  Those days India was very different from India of today with burgeoning wealth.  Therefore, we considered missing simple amenities of a comfortable middle-class life, like a microwave oven or an automobile of our own.  By this time our first son was born, and we were seriously concerned about available health-care for him.  We also contemplated about somewhat intangible benefits of living in America, like clean air, safe drinking water etc.  But at the top of the heap of our consideration was listening to NPR!  Those were the days before the rampant proliferation of internet.   After much deliberation we decided not to go back and happily continued on listening to NPR.           	
+An hour later I received an excited call from my wife.  She had heard my name in the radio that was a standard feature in the laboratory at Massachusetts General Hospital she was working at that time.  She thanked me for this decision and informed that she was thinking of doing the same herself.  To my amazement I learned that she had also fallen for NPR and its personalities.  Now, that was two for two for a family of two!Listening to NPR had a longstanding effect on our psyche.  Several years ago, when we were seriously contemplating about going back to India for good we considered many things that we would miss.  Those days India was very different from India of today with burgeoning wealth.  Therefore, we considered missing simple amenities of a comfortable middle-class life, like a microwave oven or an automobile of our own.  By this time our first son was born, and we were seriously concerned about available health-care for him.  We also contemplated about somewhat intangible benefits of living in America, like clean air, safe drinking water etc.  
 
-	Fast forward many years.  We have grown old in our adopted country, picking up a lot of her nuances.  Now in parties we talk excitedly about whether Bernie Sanders will get the Democratic Party nomination for President in the next election, or whether Celtics will make to the play-off this year.  My love for cricket has waned to almost a nil, listening to cricket-commentaries in the radio is a very distant memory.  Our way of entertaining ourselves has also changed dramatically.  I always loved to listen to music and bought a stereo system and a very expensive pair of Ohm speakers at a time when we could ill-afford them.  Now with the advent of laptops, smart phones, Facebook, YouTube, Twitter and the like, and that stereo system and those elegant wood-paneled speakers stare at me like ghosts from the past.  But, one thing hasn’t changed – as soon as I turn the key of my car NPR comes alive like an old trusted friend.   
+But at the top of the heap of our consideration was listening to NPR!  Those were the days before the rampant proliferation of internet.   After much deliberation we decided not to go back and happily continued on listening to NPR.Fast forward many years.  We have grown old in our adopted country, picking up a lot of her nuances.  Now in parties we talk excitedly about whether Bernie Sanders will get the Democratic Party nomination for President in the next election, or whether Celtics will make to the play-off this year.  My love for cricket has waned to almost a nil, listening to cricket-commentaries in the radio is a very distant memory.  Our way of entertaining ourselves has also changed dramatically.  I always loved to listen to music and bought a stereo system and a very expensive pair of Ohm speakers at a time when we could ill-afford them.  Now with the advent of laptops, smart phones, Facebook, YouTube, Twitter and the like, and that stereo system and those elegant wood-paneled speakers stare at me like ghosts from the past.  
 
-	A few days ago, I was driving to my work in Boston.  It was a miserable morning.  The sky was overcast, and one could easily smell an oncoming snow storm in the air.  This would be at the top of six feet snow banks all over the place!  I was crouched inside my old Toyota Corolla with heavy boots, gloves, a parka jacket and a woolen cap.  It was one of those days when my mind was laden with worries about work, family, weather and what not.  I seethed under my breath – For heaven’s sake why can’t we move to Florida or better yet to Kolkata where things may have gotten much better lately.  Suddenly I realized that the radio is turned off.  It must be my son who took the car yesterday – I contemplated and dutifully turned the radio on.  Immediately a soothing and warm voice enveloped me.  It took me a short while to figure out it is one of those long features where they have live interviews, bring persons with opposing views and above all take time to elaborate the issue with great care instead of sound-bites.  I was ready for a pleasant ride-along.  
+But, one thing hasn’t changed – as soon as I turn the key of my car NPR comes alive like an old trusted friend.A few days ago, I was driving to my work in Boston.  It was a miserable morning.  The sky was overcast, and one could easily smell an oncoming snow storm in the air.  This would be at the top of six feet snow banks all over the place!  I was crouched inside my old Toyota Corolla with heavy boots, gloves, a parka jacket and a woolen cap.  It was one of those days when my mind was laden with worries about work, family, weather and what not.  I seethed under my breath – For heaven’s sake why can’t we move to Florida or better yet to Kolkata where things may have gotten much better lately.  Suddenly I realized that the radio is turned off.  It must be my son who took the car yesterday – I contemplated and dutifully turned the radio on.  
 
-	The topic was Women in the military.  First voice was that of Kate Olson who joined the army in early 1950s.  To my amazement, and also that of the interviewer she elaborated how different and difficult it was for a woman cadet at West Point, and later on in service.  I laughed to my heart’s content when she stated with a chuckle that those days in the army women had to take training in cosmetics and dresses and learn how to dress attractively, forget about combat or flying an airplane.  “Do you mean you had to learn how-to put-on lipstick properly or what length skirt should one wear?” –interviewer asked in bewilderment.  “Yes, indeed – how to be attractive to men-soldiers in the army.”  Kate elaborated how it was so very difficult to be a woman and be in the army and still raise a family.  She was also unequivocal about not wanting her only child to join the army.  Then it was turn for Mandy Olson, the daughter.  Mandy was a very soft-spoken young lady.  She stated that she always looked up to her mother, and when time came for a decision, she joined West Point, no regrets. Now Kate spoke with all her maternal instincts – “My child, you have such a gentle personality you can be an academic, but never a military person!”  “No, Ma, I am not readying myself for combat.  I am planning to join the army medical school and be an army doctor.  I simply want to follow your footsteps.”  
+Immediately a soothing and warm voice enveloped me.  It took me a short while to figure out it is one of those long features where they have live interviews, bring persons with opposing views and above all take time to elaborate the issue with great care instead of sound-bites.  I was ready for a pleasant ride-along.The topic was Women in the military.  First voice was that of Kate Olson who joined the army in early 1950s. To my amazement, and also that of the interviewer she elaborated how different and difficult it was for a woman cadet at West Point, and later on in service.  I laughed to my heart’s content when she stated with a chuckle that those days in the army women had to take training in cosmetics and dresses and learn how to dress attractively, forget about combat or flying an airplane.  “Do you mean you had to learn how-to put-on lipstick properly or what length skirt should one wear?” –interviewer asked in bewilderment.  “Yes, indeed – how to be attractive to men-soldiers in the army.”  Kate elaborated how it was so very difficult to be a woman and be in the army and still raise a family.  She was also unequivocal about not wanting her only child to join the army.  Then it was turn for Mandy Olson, the daughter.  Mandy was a very soft-spoken young lady. She stated that she always looked up to her mother, and when time came for a decision, she joined West Point, no regrets. Now Kate spoke with all her maternal instincts – “My child, you have such a gentle personality you can be an academic, but never a military person!”  “No, Ma, I am not readying myself for combat.  I am planning to join the army medical school and be an army doctor.  I simply want to follow your footsteps.”Last weekend my son took my car without informing me.  It was quite annoying because my wife took the other car to work to finish up a project and I had to run some errands urgently.  Very characteristically my son would not pick up his cell phone, so I didn’t have much choice but to wait.
 
-	Last weekend my son took my car without informing me.  It was quite annoying because my wife took the other car to work to finish up a project and I had to run some errands urgently.  Very characteristically my son would not pick up his cell phone, so I didn’t have much choice but to wait.  An hour later he drove in and I eagerly opened the garage door to quickly get into the car and get to my destinations.  Suddenly I noticed that the driver’s door was half open, and my son was sitting there and listening attentively to something in the radio!  The voice sounded very familiar to me. 
+An hour later he drove in and I eagerly opened the garage door to quickly get into the car and get to my destinations.  Suddenly I noticed that the driver’s door was half open, and my son was sitting there and listening attentively to something in the radio!The voice sounded very familiar to me.
 
-*Recently Tom Magliozzi passed away.  The airwave, TV, newspapers, internet were filled with articles, anecdotes, remembrances about this wise-cracking person with an ear-splitting laughter.
+Recently Tom Magliozzi passed away.  The airwave, TV, newspapers, internet were filled with articles, anecdotes, remembrances about this wise-cracking person with an ear-splitting laughter.
