--- a/index.Rmd
+++ b/index.Rmd
@@ -8,7 +8,7 @@ bibliography: [book.bib]
 biblio-style: apalike
 link-citations: yes
 github-repo: sanyala/Rosalie_Road_Anthology
-##url: 'http\://seankross.com/bookdown-start/'
+url: 'https\://seankross.com/bookdown-start/'
 description: "Writings from the members of the Rosalie Road Group."
 ---
 
